# public/api.yaml
@@ -53,6 +53,66 @@ paths:
         500:
           description: "Internal server error"
 
+  /api/v1/admin/create:
+    post:
+      tags:
+        - Admin
+      summary: Create an Admin account
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  description: "User first name"
+                last_name:
+                  type: string
+                  description: "User last name"
+                email:
+                  type: string
+                  description: "User email"
+                password:
+                  type: string
+                  description: "User password"
+                password_confirmation:
+                  type: string
+                  description: "User password"
+                avatar:
+                  type: string
+                  description: "Avatar image UUID"
+                address:
+                  type: string
+                  description: "User address"
+                phone_number:
+                  type: string
+                  description: "User phone number"
+                marketing:
+                  type: string
+                  description: "User marketing preferences"
+              required:
+                - first_name
+                - last_name
+                - email
+                - password
+                - password_confirmation
+                - avatar
+                - address
+                - phone_number
+      responses:
+        200:
+          description: "Ok"
+        401:
+          description: "Unauthorized"
+        404:
+          description: "Page not found"
+        422:
+          description: "Unprocessable Entity"
+        500:
+          description: "Internal server error"
+
 components:
   securitySchemes:
     bearerAuth:
